# vnrs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_CN.md  TODO.md  backtest_log.md  build_errors.txt  run.ps  run.ps1  trade_engine.pyi  write_parquet_db.py
.agent/requirements/: .gitignore  config.yml  synonyms.yml
.sisyphus/plans/: plans.md
docs/: backtesting_framework.md
examples/: alpha_demo.rs  backtesting_example.py  binance_backtest.rs  connectivity_test.rs  message_bus_example.py  multi_symbol_strategy.py  risk_managed_strategy.py  spot_strategy_example.py  ui_demo.rs  volatility_backtest.rs
src/: error.rs  lib.rs  main.rs
src/agent/: mcp_bridge.rs  mod.rs  risk_agent.rs  sentiment_agent.rs  traits.rs  types.rs
src/alpha/: AGENTS.md  lab.rs  logger.rs  mod.rs  model.rs  types.rs
src/backtesting/: AGENTS.md  base.rs  data_merge.rs  database.rs  engine.rs  fill_model.rs  margin_model.rs  mod.rs  optimization.rs  portfolio.rs  position.rs  risk_engine.rs  simulated_exchange.rs  statistics.rs
src/chart/: base.rs  indicator.rs  item.rs  manager.rs  mod.rs  sync_bar_generator.rs  widget.rs
src/event/: engine.rs  journal.rs  mod.rs
src/feature/: mod.rs  offline.rs  online.rs  registry.rs  snapshot.rs  store.rs  types.rs
src/mcp/: mod.rs  prompts.rs  resources.rs  server.rs  types.rs
src/model/: mod.rs  registry.rs  server.rs  types.rs
src/python/: alpha_bindings.rs  arraymanager.rs  backtesting_bindings.rs  bindings.rs  bracket_order_engine.rs  context.rs  cta_strategy.py  data_converter.rs  data_types.rs  demo_backtest.py  engine.rs  instrument.rs  message_bus.rs  mod.rs  offset_converter.rs  order_emulator.rs  order_factory.rs  portfolio.rs  portfolio_stats.rs  risk_manager.rs  run_backtest.py  spot_strategy.py  stop_order_engine.rs  strategy.rs  strategy_adapter.rs  strategy_bindings.rs  sync_bar_bindings.rs
src/rl/: action.rs  env.rs  info.rs  mod.rs  observation.rs  reward.rs
src/rpc/: client.rs  common.rs  mod.rs  server.rs  trading_service.rs
src/shadow/: comparison.rs  engine.rs  metrics.rs  mod.rs  promotion.rs
src/signal/: bus.rs  mod.rs  subscriber.rs  types.rs
src/strategy/: async_engine.rs  async_template.rs  base.rs  engine.rs  futures_template.rs  grid_template.rs  mod.rs  template.rs  volatility.rs
strategies/: __init__.py  atr_rsi_strategy.py  bitcoin_spot_strategy.py  boll_channel_strategy.py  cta_utils.py  double_ma_strategy.py  dual_thrust_strategy.py  king_keltner_strategy.py  multi_signal_strategy.py  multi_timeframe_strategy.py  run_backtests.py  test_strategy.py  turtle_15min_ema_comprehensive.py  turtle_15min_ema_strategy.py  turtle_signal_strategy.py  volatility_breakout_strategy.py
tests/: gateway_integration.rs  integration_tests.rs
(+202 files in other folders)
