[package]
name = "trade_engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance trading engine written in Rust"
license = "MIT"
repository = "https://github.com/your-org/trade_engine"
keywords = ["trading", "finance", "quant", "algorithmic-trading"]
categories = ["finance"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time - 使用兼容版本
chrono = { version = "0.4.38", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Numeric
rust_decimal = { version = "1.33", features = ["serde-with-str"] }

# Technical Analysis
ta = "0.5"

# Utilities
dirs = "6.0.0"
rayon = "1.8"
rand = "0.9.2"

# UUID
uuid = { version = "1.0", features = ["v4"] }

# HTTP Client (for Binance REST API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket (for Binance WebSocket)
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# Proxy support for WebSocket
tokio-socks = "0.5"
url = "2.5"
base64 = "0.22"

# Crypto (for API signing)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Lazy initialization
once_cell = "1.20"

# Python integration
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }

# Arrow for data interchange
arrow = { version = "57.1.0", optional = true }
arrow-array = { version = "57.1.0", optional = true }
arrow-schema = { version = "57.1.0", optional = true }

# Data processing
polars = { version = "0.46", features = ["parquet", "json", "lazy", "diagonal_concat", "dtype-datetime"], optional = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"], optional = true }

# GUI
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
rfd = "0.15"  # Native file dialogs

# Runtime version info
rustc_version_runtime = "0.3"

# RPC
zmq = "0.10"
lru = "0.16.2"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["gui","alpha","python"]
gui = []
python = ["dep:pyo3", "dep:arrow", "dep:arrow-array", "dep:arrow-schema"]
alpha = ["dep:polars", "dep:arrow", "dep:arrow-array", "dep:arrow-schema"]
database = ["dep:sqlx"]

[lib]
name = "trade_engine"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "trade_engine_app"
path = "src/main.rs"
